# Bluepy

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  SETTINGS_UI_SUMMARY.md  pyproject.toml  requirements.txt
.claude/: phase4-week2.yaml
config/: .gitkeep
data/: README.md
docs/: ARCHITECTURE.md  DOMAIN_MODEL_DESIGN.md  LEGACY_ANALYSIS.md  LEGACY_ANALYSIS_DETAIL.md  MIGRATION_STRATEGY.md  README.md  ROADMAP.md  SETTINGS_UI_IMPLEMENTATION.md  THEME_USAGE.md  WINDOWS_REMEDIATION_ANALYSIS.md  YAML_SCHEMA_GUIDE.md  analysis.md  experiments.md  operations.md  overview.md  pipeline.md  session_handover.md
examples/: theme_demo.py
models/: README.md
notebooks/: README.md
resources/styles/: README.md  dark.qss  light.qss
scripts/: README.md  migrate_legacy.py  remove_emojis.py  update_macos_rules.py
src/: README.md
src/data/: README.md
src/eda/: README.md
src/features/: README.md
src/gui/: app.py  main_window.py  theme_manager.py
src/training/: README.md
submission/: README.md
tasks/: prd-python2-to-3-migration.md  tasks-prd-python2-to-3-migration.md
tests/: README.md  conftest.py
tests/gui/: __init__.py  test_settings_dialog.py
tests/integration/: test_scanner_analyzer.py  test_workflow.py
tests/unit/: test_analyzer.py  test_backup_manager.py  test_base_remediator.py  test_database_models.py  test_domain_models.py  test_gui_components.py  test_linux_remediator.py  test_macos_remediator.py  test_migration.py  test_reporter.py  test_rule_loader.py  test_scanner.py  test_server_repository.py  test_settings.py  test_validators.py  test_winrm_client.py  test_yaml_rules.py
(+193 files in other folders)
